--- a/environment.yml
+++ b/environment.yml
@@ -1,158 +1,12 @@
 name: TD_ML
 channels:
-  - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
-  - alsa-lib=1.2.3
-  - argon2-cffi=20.1.0
-  - async_generator=1.10
-  - attrs=21.2.0
-  - backcall=0.2.0
-  - bleach=4.0.0
-  - ca-certificates=2021.7.5
-  - certifi=2021.5.30
-  - cffi=1.14.6
-  - cycler=0.10.0
-  - dbus=1.13.6
-  - decorator=5.0.9
-  - defusedxml=0.7.1
-  - entrypoints=0.3
-  - expat=2.4.1
-  - fontconfig=2.13.1
-  - freetype=2.10.4
-  - gettext=0.19.8.1
-  - glib=2.68.3
-  - glib-tools=2.68.3
-  - gst-plugins-base=1.18.4
-  - gstreamer=1.18.4
-  - icu=68.1
-  - importlib-metadata=3.10.0
-  - importlib_metadata=3.10.0
-  - ipykernel=5.3.4
-  - ipython=7.22.0
-  - ipython_genutils=0.2.0
-  - ipywidgets=7.6.3
-  - jbig=2.1
-  - jedi=0.17.2
-  - jinja2=3.0.1
-  - joblib=1.0.1
-  - jpeg=9d
-  - jsonschema=3.2.0
-  - jupyter=1.0.0
-  - jupyter_client=6.1.12
-  - jupyter_console=6.4.0
-  - jupyter_core=4.7.1
-  - jupyterlab_pygments=0.1.2
-  - jupyterlab_widgets=1.0.0
-  - kiwisolver=1.3.1
-  - krb5=1.19.2
-  - lcms2=2.12
-  - ld_impl_linux-64=2.35.1
-  - lerc=2.2.1
-  - libblas=3.9.0
-  - libcblas=3.9.0
-  - libclang=11.1.0
-  - libdeflate=1.7
-  - libedit=3.1.20191231
-  - libevent=2.1.10
-  - libffi=3.3
-  - libgcc-ng=9.3.0
-  - libgfortran-ng=11.1.0
-  - libgfortran5=11.1.0
-  - libglib=2.68.3
-  - libgomp=9.3.0
-  - libiconv=1.16
-  - liblapack=3.9.0
-  - libllvm11=11.1.0
-  - libogg=1.3.4
-  - libopenblas=0.3.17
-  - libopus=1.3.1
-  - libpng=1.6.37
-  - libpq=13.3
-  - libsodium=1.0.18
-  - libstdcxx-ng=9.3.0
-  - libtiff=4.3.0
-  - libuuid=2.32.1
-  - libvorbis=1.3.7
-  - libwebp-base=1.2.0
-  - libxcb=1.13
-  - libxkbcommon=1.0.3
-  - libxml2=2.9.12
-  - lz4-c=1.9.3
-  - markupsafe=2.0.1
-  - matplotlib=3.4.2
-  - matplotlib-base=3.4.2
-  - mistune=0.8.4
-  - mysql-common=8.0.25
-  - mysql-libs=8.0.25
-  - nbclient=0.5.3
-  - nbconvert=6.1.0
-  - nbformat=5.1.3
-  - ncurses=6.2
-  - nest-asyncio=1.5.1
-  - notebook=6.4.3
-  - nspr=4.30
-  - nss=3.67
-  - numpy=1.21.1
-  - olefile=0.46
-  - openjpeg=2.4.0
-  - openssl=1.1.1k
-  - packaging=21.0
-  - pandas=1.3.1
-  - pandocfilters=1.4.3
-  - parso=0.7.0
-  - pcre=8.45
-  - pexpect=4.8.0
-  - pickleshare=0.7.5
-  - pillow=8.3.1
-  - pip=21.1.3
-  - prometheus_client=0.11.0
-  - prompt-toolkit=3.0.17
-  - prompt_toolkit=3.0.17
-  - pthread-stubs=0.4
-  - ptyprocess=0.7.0
-  - pycparser=2.20
-  - pygments=2.9.0
-  - pyparsing=2.4.7
-  - pyqt=5.12.3
-  - pyqt-impl=5.12.3
-  - pyqt5-sip=4.19.18
-  - pyqtchart=5.12
-  - pyqtwebengine=5.12.1
-  - pyrsistent=0.18.0
   - python=3.9.5
-  - python-dateutil=2.8.2
-  - python_abi=3.9
-  - pytz=2021.1
-  - pyzmq=20.0.0
-  - qt=5.12.9
-  - qtconsole=5.1.0
-  - qtpy=1.9.0
-  - readline=8.1
-  - scikit-learn=0.24.2
-  - scipy=1.7.0
-  - send2trash=1.5.0
-  - setuptools=52.0.0
-  - six=1.16.0
-  - sqlite=3.36.0
-  - terminado=0.9.4
-  - testpath=0.5.0
-  - threadpoolctl=2.2.0
-  - tk=8.6.10
-  - tornado=6.1
-  - traitlets=5.0.5
-  - tzdata=2021a
-  - wcwidth=0.2.5
-  - webencodings=0.5.1
-  - wheel=0.36.2
-  - widgetsnbextension=3.5.1
-  - xorg-libxau=1.0.9
-  - xorg-libxdmcp=1.1.3
-  - xz=5.2.5
-  - zeromq=4.3.4
-  - zipp=3.5.0
-  - zlib=1.2.11
-  - zstd=1.5.0
+  - ipykernel
+  - pandas
+  - scikit-learn
+  - numpy
+  - matplotlib
+  - jupyter
 prefix: /home/meyer/anaconda3/envs/TD_ML
